err/django-mediatoolset.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_mediatoolset-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/mediatoolset'...
Listing './lib/python3.5/site-packages/mediatoolset/management'...
Listing './lib/python3.5/site-packages/mediatoolset/management/commands'...
Compiling './lib/python3.5/site-packages/mediatoolset/management/commands/clean_media.py'...
***   File "./lib/python3.5/site-packages/mediatoolset/management/commands/clean_media.py", line 17
    print "Yay! 0 stale files found"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mediatoolset/management/commands/loaddata_with_media.py'...
***   File "./lib/python3.5/site-packages/mediatoolset/management/commands/loaddata_with_media.py", line 30
    print "Source files %s doesn't exist. Skipping." % src_path
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
